fix search dropdown bg colour on mobile

--- a/css/mobile.less
+++ b/css/mobile.less
@@ -100,7 +100,7 @@ body {
       color: #c3c3c3;
       }
 
-      #dw__navbar .dropdown-menu {
+      #dw__navbar .dropdown-menu:not(.typeahead) {
         background: #1d2124;
       }
 
